--- a/src/styles/components/_wysiwyg.scss
+++ b/src/styles/components/_wysiwyg.scss
@@ -150,7 +150,7 @@
 
 
   & > :last-child {
-    margin-bottom: 0;
+    margin-bottom: 0 !important;
   }
 
 
@@ -164,6 +164,4 @@
   .text-black {
     color: $color-black;
   }
-
-
 }
