--- a/src/styles/layout/_section.scss
+++ b/src/styles/layout/_section.scss
@@ -6,4 +6,12 @@
 .section {
   padding-top: 64px;
   padding-bottom: 80px;
+
+  &:first-of-type {
+    padding-top: 32px;
+  }
+
+  &:last-of-type {
+    padding-bottom: 40px;
+  }
 }
