--- a/src/styles/templates/_learn.scss
+++ b/src/styles/templates/_learn.scss
@@ -72,8 +72,10 @@
     // Own Styles
     display: block;
     position: relative;
-    padding: 10px 10px;
+    padding: 10px 28px 10px 10px;
     margin-bottom: 16px;
+
+    text-overflow:ellipsis;
 
     cursor: pointer;
     @include font-display-bold;
